# mitz_datagen

./: LICENSE  info.txt  setup.cfg
src/mitz_datagen.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test/: test.py
