[metadata]
name = mitz_datagen
version = 0.0.2
author = Rishad M
author_email = rishad.m@mitz.ai
description = Fake data generator using gpt3
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/rishadm-ai7/mitz_datagen
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    openai
    Faker

[options.packages.find]
where = src
